@@ -527,7 +527,7 @@
 					"name": "person_id",
 					"description": "Connect a MODX user to this item. Only active users will be shown.",
 					"type": "listbox",
-					"inputOptionValues": "@SELECT '' AS username, '' AS id UNION ALL ( SELECT username, id FROM `modx_users` ORDER BY username )",
+					"inputOptionValues": "@SELECT '' AS username, '' AS id UNION ALL ( SELECT username, id FROM `modx_users` WHERE `active` = 1 ORDER BY username )",
 					"category": "Connections",
 					"sortOrder": "1"
 				},
@@ -1611,7 +1611,7 @@
 					]
 				},
 				{
-					"caption": "Locality",
+					"caption": "City / Town",
 					"name": "address_locality",
 					"description": "",
 					"type": "text",
@@ -1832,6 +1832,18 @@
 					"category": "Person - Information",
 					"sortOrder": "3",
 					"inputOptionValues": "Male==m||Female==f||Other==o",
+					"templates": [
+						"TeamMember",
+"Team - Member"
+					]
+				},
+				{
+					"caption": "Birthdate",
+					"name": "person_birthdate",
+					"description": "",
+					"type": "date",
+					"category": "Person - Information",
+					"sortOrder": "4",
 					"templates": [
 						"TeamMember",
 "Team - Member"
