@@ -1,6 +1,5 @@
 <?php
-//$assetsPath = 'assets/components/patternlab/'; // @todo: turn this into the Romanesco SUI themes' dist folder path
-$assetsPath = $this->modx->getOption('romanesco-patterns.custom-js-path');
+$assetsPath = $modx->getOption('romanesco.custom_js_path');
 
 // Load JS in footer
 $modx->regClientScript($assetsPath.'js/formblocks.js');
